# json-formatter

./: .gitignore  Cargo.toml  LICENSE  README.md  sample.json
.github/workflows/: rust.yml
src/: ast.rs  formatter.rs  main.rs  main.yml  parser.rs
